2007-07-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.addin.xml: worked on translation addin.

2007-07-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.addin.xml: Worked on translation.

2007-07-06  Mike Krüger <mkrueger@novell.com> 

	* .: Adding the localization addin. Already worked on the translation
	  system.
