@@ -56,6 +56,8 @@
     <File name="./icons/md-gettext-project_22.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./ChangeLog" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Gettext/TranslationService.cs" subtype="Code" buildaction="Compile" />
+    <File name="./MonoDevelop.Gettext/TranslationProjectOptionsDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="./gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
