@@ -1,5 +1,10 @@
 2007-07-11  Mike Krüger <mkrueger@novell.com> 
 
+	* gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs: Fixed
+	  little bug. Added options dialog.
+
+2007-07-11  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Gettext.addin.xml: worked on translation addin.
 
 2007-07-10  Mike Krüger <mkrueger@novell.com> 
